--- a/.gitignore
+++ b/.gitignore
@@ -1,61 +1,31 @@
-*.iml
-*.ipr
-*.iws
-.idea/
-out/
-local.properties
+# Specifies intentionally untracked files to ignore when using Git
+# http://git-scm.com/docs/gitignore
 
-# Generic Android ignores #
-###########################
-bin/
-target
-gen/
-
-# Compiled source #
-###################
-*.com
-*.class
-*.dll
-*.exe
-*.o
-*.so
-
-# Packages #
-############
-*.7z
-*.dmg
-*.gz
-*.iso
-*.rar
-*.tar
-*.zip
-
-# Logs and databases #
-######################
-log/
-*.log
-*.sql
-*.sqlite
-
-# OS generated files #
-######################
+*~
+*.sw[mnpcod]
+.tmp
+*.tmp
+*.tmp.*
+*.sublime-project
+*.sublime-workspace
 .DS_Store
-.DS_Store?
-ehthumbs.db
-Icon?
 Thumbs.db
+UserInterfaceState.xcuserstate
+$RECYCLE.BIN/
 
-# VCS #
-#######
-.svn
-.svn/
-CVS
+*.log
+log.txt
+npm-debug.log*
 
-# XCode 4 #
-###########
-*.xcuserstate
-*.pbxuser
-*.mode1v3
-*.mode2v3
-*.perspectivev3
-xcuserdata/
+/.idea
+/.ionic
+/.sass-cache
+/.sourcemaps
+/.versions
+/.vscode
+/coverage
+/dist
+/node_modules
+/platforms
+/plugins
+/www
